<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ChatPal</string>
    <string name="welcome_chatpal">CHATPAL\'E HOŞGELDİNİZ</string>
    <string name="your_email_address">E-mail Adresiniz</string>
    <string name="your_password">Şifreniz</string>
    <string name="just_password">Şifre</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="forget_password">Parolanı mı Unuttun?</string>
    <string name="login">Giriş Yap</string>
    <string name="not_member">Üye değil misiniz?</string>
    <string name="sign_up">Üye Ol</string>
    <string name="not_working_feature">Bu özellik şuanda çalışmamaktadır.</string>
    <string name="name_surname">Adınız ve Soyadınız</string>
    <string name="password_again">Şifrenizi tekrar giriniz</string>
    <string name="your_gender">Cinsiyetiniz</string>
    <string name="your_birthdate">Doğum Tarihiniz</string>
    <string name="date_type">GG/AA/YYYY</string>
    <string name="select_username">Kullanıcı adı seçiniz</string>
    <string name="your_city">Yaşadığınız Şehir</string>
    <string name="gender_woman">Kadın</string>
    <string name="gender_man">Erkek</string>
    <string name="select_gender">Cinsiyetinizi seçiniz.</string>
    <string name="already_have_an_account">Zaten hesabın var mı?</string>
    <string name="no_matched_password">Parolalar eşleşmiyor</string>
    <string name="already_have_account_to_email">Bu e-mail adresine kayıtlı bir hesap bulunmaktadır.</string>
    <string name="signup_successful">Kayıt işlemi başarıyla tamamlandı!</string>
    <string name="enter_valid_email">Lütfen geçerli bir e-mail adresi giriniz.</string>
    <string name="enter_name_surname">Lütfen adınızı ve soyadınızı giriniz.</string>
    <string name="enter_birthdate">Lütfen doğum tarihinizi giriniz.</string>
    <string name="username_matched">Bu kullanıcı adı başka bir kullanıcı tarafından kullanılmaktadır.</string>
    <string name="fill_all_places">Lütfen tüm alanları doldurunuz.</string>
    <string name="wrong_email">E-mail adresiniz hatalı.</string>
    <string name="wrong_password">Parolanız hatalı.</string>
    <string name="login_succesful">Giriş işlemi başarılı.</string>
    <string name="messages">Mesajlar</string>
    <string name="profile">Profil</string>
    <string name="discover">Keşif Köprüsü</string>
    <string name="friends">Arkadaşlar</string>
    <string name="add_friend">Arkadaş Ekle</string>
    <string name="add_friend_username">Eklemek istediğiniz kişinin kullanıcı adını giriniz.</string>
    <string name="add_friend_username_alert">Kullanıcı adı</string>
    <string name="find_user">Kullanıcı ara</string>
    <string name="cancel">İptal</string>
    <string name="enter_anything">Lütfen bir değer giriniz</string>
    <string name="no_found_user">Belirtilen kullanıcı adıyla kullanıcı bulunamadı.</string>
    <string name="user_info">Kullanıcı Bilgileri</string>
    <string name="block_user">Kullanıcıyı Engelle</string>
    <string name="send_message">Mesaj Gönder</string>
    <string name="enter_looking_for_username">Aramak istediğiniz kişinin kullanıcı adını giriniz.</string>
    <string name="send_request_to_name">Şu kişiye istek gönderiyorsunuz: </string>
    <string name="want_to_add_you">Hey, seninle arkadaş olmak istiyorum!</string>
    <string name="add">Ekle</string>
    <string name="succesful_send_friend_request">Arkadaşlık isteği başarıyla gönderildi.</string>
    <string name="process_cancelled">İşlem iptal edildi</string>
    <string name="request_sended">İstek gönderildi</string>
    <string name="my_friends">Arkadaşlarım</string>
    <string name="waiting_friend_request">Arkadaşlık İsteklerim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="coming_request_number">Gelen arkadaşlık isteği sayısı: </string>
    <string name="see_all">Tümünü Gör</string>
    <string name="manage_friendship_request">Arkadaşlık isteğini yönet</string>
    <string name="cannot_send_request_yourself">Kendinize arkadaşlık isteği gönderemezsiniz</string>
    <string name="accept">Kabul Et</string>
    <string name="delete">Sil</string>
    <string name="sender_name">Gönderen adı: </string>
    <string name="sended_date">Gönderilme tarihi: </string>
    <string name="content_of_message">Mesaj içeriği: </string>
    <string name="username">Kullanıcı Adı</string>
    <string name="birthdate">Doğum Tarihi</string>
    <string name="city">Şehir</string>
    <string name="number_of_friends">Arkadaş Sayısı</string>
    <string name="send">Gönder</string>
    <string name="write_message">Bir mesaj yazın.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Anasayfa</string>
    <string name="share_post">Gönderi Paylaş</string>
    <string name="enter_content">İçerik Girin</string>
    <string name="share">Paylaş</string>
    <string name="about_me">Hakkımda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="save">Kaydet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="comments">Yorumlar</string>
    <string name="update">Güncelle</string>
    <string name="update_comment">Yorum Güncelle</string>
    <string name="settings">Ayarlar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>