<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmentHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_home_24"
        android:title="Anasayfa" />
    <item
        android:id="@+id/fragmentDiscover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_public_24"
        android:title="@string/discover" />
    <item
        android:id="@+id/fragmentMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/messages" />
    <item
        android:id="@+id/fragmentFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/friends" />

    <item
        android:id="@+id/fragmentProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

</menu>